# dimos

./: .gitignore  NEWREADME.MD  README.md  flake.nix  pyproject.toml  uv.lock.REMOVED.git-id
autoresearch/: optimizations.py
dimos/: rework.py
dimos/agents/: vlm_agent.py  vlm_stream_tester.py
dimos/agents/evals/: config.py  runner.py
dimos/agents/mcp/: mcp_server.py
dimos/agents/skills/: gps_nav_skill.py
dimos/agents2/skills/: visual_tracking.py
dimos/control/: blueprints.py  coordinator.py  hardware_interface.py
dimos/control/tasks/: teleop_task.py
dimos/core/: __init__.py  blueprints.py  docker_runner.py  global_config.py  module.py  module_coordinator.py  native_module.py  test_blueprints.py  test_core.py  test_native_module.py  test_worker.py  testing.py  transport.py  worker.py  worker_docker.py  worker_manager.py
dimos/core/tests/: native_echo.py
dimos/hardware/camera/: module.py
dimos/manipulation/: manipulation_module.py
dimos/manipulation/dynamic_tracking/: aruco_tracker.py  dt_blueprint.py
dimos/mapping/: costmapper.py  test_voxels.py  voxels.py
dimos/memory/: embedding.py  formatting.py  store.py  stream.py  transformer.py  type.py
dimos/memory2/: __init__.py  architecture.md  conftest.py  embeddings.md  intro.md  stream.py  test_blobstore_integration.py  test_e2e.py  test_embedding.py  test_registry.py  test_save.py  test_store.py  test_stream.py  test_visualizer.py  transform.py
dimos/navigation/: cmd_vel_mux.py  rosnav.py  rosnav_docker.py
dimos/perception/: object_tracker.py  object_tracker_3d.py  test_object_tracker_3d.py
dimos/protocol/tf/: tf.py
dimos/robot/: all_blueprints.py
dimos/simulation/: sim_blueprints.py  test_publish_topic.py
dimos/utils/: gpu_utils.py  logging_config.py  metrics.py  telemetry_recorder.py
dimos/vr/: README.md  coordinate_transform.py
docs/: hooks.py  install_and_setup.md  telemetry.md
docs/agents/: pr.md
docs/api/: visualization.md
docs/concepts/: transports.md
docs/development/: simulation.md
docs/usage/: native_modules.md
examples/docker_hello_world/: hello_docker.py
native/rust/: Cargo.toml
onnx/: metric3d_vit_small.onnx
tests/: test_per_run_logs.py
(+160 files in other folders)
